# fortnite-api-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
openapi/: swagger.json
scripts/: generate.py
src/fortnite_api/: __init__.py  _transport.py  client.py  errors.py  models.py
src/fortnite_api/resources/: __init__.py  _base.py  account.py  aes.py  assets.py  battlepass.py  calendar.py  cosmetics.py  crew.py  events.py  fn.py  friends.py  map.py  news.py  oauth.py  parsing.py  playlists.py  profile.py  quests.py  replays.py  shop.py  stats.py  tournaments.py  weapons.py
tests/: test_live.py  test_transport.py
